# goit_web_unit6_asyncio_folder_sorter

./: README.md  main.py  pyproject.toml
garbage/: Microsoft PowerPoint.pptx  Microsoft Word.docx
garbage/assets/: Microsoft Excel.xlsx
garbage/folder/: menyu_banket.xlsx  notes.7z
garbage/folder/sub folder/: universalnaya_doverennost_30_10_2015 (1).doc  Найбагатший чоловік у Вавилоні .epub  таблица.xlsx
